fix z-index

--- a/src/components/randomChar/randomChar.css
+++ b/src/components/randomChar/randomChar.css
@@ -34,7 +34,7 @@
 }
 .random-block__control--random-char {
   position: absolute;
-  z-index: 20;
+  z-index: 100;
   left: calc(50% - 60px);
   bottom: -60px;
   width: 120px;
